--- a/Target Support Files/Pods-WorkAndRest-FMDB/Pods-WorkAndRest-FMDB-Private.xcconfig
+++ b/Target Support Files/Pods-WorkAndRest-FMDB/Pods-WorkAndRest-FMDB-Private.xcconfig
@@ -1,5 +1,5 @@
 #include "Pods-WorkAndRest-FMDB.xcconfig"
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) COCOAPODS=1
-HEADER_SEARCH_PATHS = "${PODS_ROOT}/Headers/Build" "${PODS_ROOT}/Headers/Build/FMDB" "${PODS_ROOT}/Headers/Public" "${PODS_ROOT}/Headers/Public/FMDB" "${PODS_ROOT}/Headers/Public/Masonry" "${PODS_ROOT}/Headers/Public/SWTableViewCell"
+HEADER_SEARCH_PATHS = "${PODS_ROOT}/Headers/Build" "${PODS_ROOT}/Headers/Build/FMDB" "${PODS_ROOT}/Headers/Public" "${PODS_ROOT}/Headers/Public/FMDB" "${PODS_ROOT}/Headers/Public/JBChartView" "${PODS_ROOT}/Headers/Public/Masonry" "${PODS_ROOT}/Headers/Public/SWTableViewCell"
 OTHER_LDFLAGS = ${PODS_WORKANDREST_FMDB_OTHER_LDFLAGS} -ObjC
 PODS_ROOT = ${SRCROOT}
