--- a/Target Support Files/Pods-WorkAndRest-MBProgressHUD/Pods-WorkAndRest-MBProgressHUD-Private.xcconfig
+++ b/Target Support Files/Pods-WorkAndRest-MBProgressHUD/Pods-WorkAndRest-MBProgressHUD-Private.xcconfig
@@ -1,5 +1,5 @@
 #include "Pods-WorkAndRest-MBProgressHUD.xcconfig"
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) COCOAPODS=1
-HEADER_SEARCH_PATHS = "${PODS_ROOT}/Headers/Build" "${PODS_ROOT}/Headers/Build/MBProgressHUD" "${PODS_ROOT}/Headers/Public" "${PODS_ROOT}/Headers/Public/FMDB" "${PODS_ROOT}/Headers/Public/JBChartView" "${PODS_ROOT}/Headers/Public/MBProgressHUD" "${PODS_ROOT}/Headers/Public/Masonry" "${PODS_ROOT}/Headers/Public/SWTableViewCell"
+HEADER_SEARCH_PATHS = "${PODS_ROOT}/Headers/Build" "${PODS_ROOT}/Headers/Build/MBProgressHUD" "${PODS_ROOT}/Headers/Public" "${PODS_ROOT}/Headers/Public/EAIntroView" "${PODS_ROOT}/Headers/Public/EARestrictedScrollView" "${PODS_ROOT}/Headers/Public/FMDB" "${PODS_ROOT}/Headers/Public/JBChartView" "${PODS_ROOT}/Headers/Public/MBProgressHUD" "${PODS_ROOT}/Headers/Public/Masonry" "${PODS_ROOT}/Headers/Public/SWTableViewCell"
 OTHER_LDFLAGS = ${PODS_WORKANDREST_MBPROGRESSHUD_OTHER_LDFLAGS} -ObjC
 PODS_ROOT = ${SRCROOT}
